<resources>
    <string name="app_name">Calendar Mad</string>
    <string name="fb_login_protocol_scheme">fb1390162044425359</string>
    <string name="facebook_app_id">1390162044425359</string>
    <string name="facebook_app_secret">5bd06a96a7e6d3ada781eca3576bc179</string>
    <string name="success_login_toast">Login success</string>
    <string name="cancel_login_toast">User has cancelled</string>
    <string name="calendar_sync_text">Sync</string>
    <string name="main_view_calendar_text">View Calendar</string>
    <string name="date_content_date_tv_holder">Date</string>
    <string name="date_content_fb_events_tv">Facebook Events</string>
    <string name="fb_event_item_name_tv_holder">Event name</string>
    <string name="fb_event_item_description_tv_holder">Event description</string>
    <string name="twitter_app_id">FeeuUUfQaytXTeoesQyukMeCC</string>
    <string name="twitter_app_secret">	mFUqL915crlqss07MK3M1FjRL1GdedwPksKIMiY3ukZjyaxVB2</string>
    <string name="twitter_tweet_item_description_tv_holder">Tweet text</string>
    <string name="date_content_twitter_tweet_tv">Tweets</string>
    <string name="account_management_media_tv">Media</string>
    <string name="account_management_status_tv">Status</string>
    <string name="account_management_facebook_tv">Facebook</string>
    <string name="account_management_twitter_tv">Twitter</string>
</resources>
